fix(vertical-nav): remove double border on group header active (#889)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Currently on routed nav items -
https://storybook.clarity.design/demo/vertical-nav/routing/beatles when
you select the group header it gets double border

Issue Number: N/A

## What is the new behavior?

No longer with double border

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
+++ b/projects/angular/src/layout/vertical-nav/_vertical-nav.clarity.scss
@@ -396,8 +396,6 @@
           variables.$clr-use-custom-properties
         );
 
-        border-left: variables.$clr_baselineRem_3px solid var(--clr-nav-active-box-shadow-color);
-
         //Horrible Nesting but nothing I can do.
         .nav-icon {
           @include mixins.css-var(
